[package]
name = "qu"
version = "0.2.15"
authors = ["DFINITY Team", "Christian Müller"]
edition = "2018"

[[bin]]
name = "qu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
bip39 = "1.0.1"
candid = "0.7.8"
clap = "3.0.0-beta.5"
hex = {version = "0.4.2", features = ["serde"] }
ic-agent = "0.10.0"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "936bf9ccaabd566c68232e5cb3f3ce7d5ae89328" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "936bf9ccaabd566c68232e5cb3f3ce7d5ae89328" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "936bf9ccaabd566c68232e5cb3f3ce7d5ae89328" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "936bf9ccaabd566c68232e5cb3f3ce7d5ae89328" }
ic-types = "0.2.2"
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "936bf9ccaabd566c68232e5cb3f3ce7d5ae89328" }
libsecp256k1 = "0.7.0"
num-bigint = "0.4.3"
pem = "1.0.1"
rand = { version = "0.8.4", features = ["getrandom"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
serde_json = "1.0.57"
simple_asn1 = "0.6.1"
tiny-hderive = "0.3.0"
tokio = { version = "1.2.0", features = [ "fs" ] }

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"
codegen-units = 1
